Updating README, fixing layout bugs

--- a/site/scss/portfolio/_vars.scss
+++ b/site/scss/portfolio/_vars.scss
@@ -2,7 +2,7 @@ $base-font-size-px: 19px;
 
 $bg-grey: #181818;
 $mid-grey: #555;
-$dark-grey: #353535;
+$dark-grey: #444;
 $light-grey: #777;
 $dusty-pink: #c349ba;
 $dusty-pink-dark: #662661;
